# ktexteditor

./: .arcconfig  .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kateproject  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5TextEditorConfig.cmake.in  KF6TextEditorConfig.cmake.in  KTextEditorConfig.cmake.in  Mainpage.dox  README.md  config.h.cmake  ktexteditor.categories  metainfo.yaml  reformat.sh
autotests/: CMakeLists.txt
autotests/input/: bug205447.txt  bug313769.cpp  bug404713_line_height_issue.xml  md5checksum.txt  modelines.txt
autotests/src/: bug205447.cpp  bug205447.h  bug286887.cpp  bug286887.h  bug313759.cpp  bug313759.h  bug313769.cpp  bug313769.h  bug317111.cpp  bug317111.h  bug329247.cpp  bug329247.h  bugs_test.cpp  bugs_test.h  camelcursortest.cpp  camelcursortest.h  codecompletiontestmodel.cpp  codecompletiontestmodel.h  codecompletiontestmodels.cpp  codecompletiontestmodels.h  commands_test.cpp  commands_test.h  completion_test.cpp  completion_test.h  configinterface_test.cpp  configinterface_test.h  cursorwords_test.cpp  cursorwords_test.h  encodingtest.cpp  encodingtest.h  evaluate_script_test.cpp  evaluate_script_test.h  example.cpp  indentdetect_test.cpp  indentdetect_test.h  indenttest.cpp  indenttest.h  inlinenote_test.cpp  inlinenote_test.h  katedocument_test.cpp  (+64 more)
src/: CMakeLists.txt  Messages.sh  README.md  TODO  ktexteditor-index.qdoc  ktexteditor.qdoc  ktexteditor.qdocconf  pch.h  test_libgit2_threads.c
src/buffer/: katesecuretextbuffer.cpp  katesecuretextbuffer_p.h  katetextblock.cpp  katetextblock.h  katetextbuffer.cpp  katetextbuffer.h  katetextcursor.cpp  katetextcursor.h  katetextfolding.cpp  katetextfolding.h  katetexthistory.cpp  katetexthistory.h  katetextline.cpp  katetextline.h  katetextloader.h  katetextrange.cpp  katetextrange.h  org.kde.ktexteditor.katetextbuffer.actions  org.kde.ktexteditor6.katetextbuffer.actions
src/completion/: documentation_tip.cpp  documentation_tip.h  kateargumenthintmodel.cpp  kateargumenthintmodel.h  kateargumenthinttree.cpp  kateargumenthinttree.h  katecompletionconfig.cpp  katecompletionconfig.h  katecompletiondelegate.cpp  katecompletiondelegate.h  katecompletionmodel.cpp  katecompletionmodel.h  katecompletiontree.cpp  katecompletiontree.h  katecompletionwidget.cpp  katecompletionwidget.h  katekeywordcompletion.cpp  katekeywordcompletion.h  katemodelinecompletion.cpp  katemodelinecompletion.h  katewordcompletion.cpp  katewordcompletion.h
src/data/: CMakeLists.txt  katemoderc  katepart5ui.rc  katepartui.rc  kateschemarc  katesyntaxhighlightingrc  ktexteditor.desktop  ktexteditor.qrc  ktexteditorplugin.desktop
src/dialogs/: bordersappearanceconfigwidget.ui  clipboardhistorydialog.cpp  clipboardhistorydialog.h  completionconfigtab.ui  editconfigwidget.ui  filetypeconfigwidget.ui  indentationconfigwidget.ui  kateconfigpage.cpp  kateconfigpage.h  katedialogs.cpp  katedialogs.h  navigationconfigwidget.ui  opensaveconfigadvwidget.ui  opensaveconfigwidget.ui  quickdialog.h  statusbarconfigwidget.ui  textareaappearanceconfigwidget.ui
src/document/: editorconfig.cpp  editorconfig.h  katebuffer.cpp  katebuffer.h  katedocument.cpp  katedocument.h  katedocumenthelpers.cpp  katedocumenthelpers.h
src/draft/: foldinginterface.h  templateinterface.h  templateinterface2.h
src/export/: abstractexporter.h  exporter.cpp  exporter.h  htmlexporter.cpp  htmlexporter.h
src/include/: CMakeLists.txt
src/inputmode/: kateabstractinputmode.cpp  kateabstractinputmode.h  kateabstractinputmodefactory.cpp  kateabstractinputmodefactory.h  kateleapinputmode.cpp  kateleapinputmode.h  kateleapinputmodefactory.cpp  kateleapinputmodefactory.h  katenormalinputmode.cpp  katenormalinputmode.h  katenormalinputmodefactory.cpp  katenormalinputmodefactory.h  kateviinputmode.cpp  kateviinputmode.h  kateviinputmodefactory.cpp  kateviinputmodefactory.h
src/kte5/: foldinginterface.h
src/mode/: katemodeconfigpage.cpp  katemodeconfigpage.h  katemodemanager.cpp  katemodemanager.h  katemodemenu.cpp  katemodemenu.h  katemodemenulist.cpp  katemodemenulist.h  katewildcardmatcher.cpp  katewildcardmatcher.h
src/part/: CMakeLists.txt  katepart.cpp  katepart.desktop  katepart.desktop.in  katepart.json.in
src/printing/: kateprinter.cpp  kateprinter.h  printconfigwidgets.cpp  printconfigwidgets.h  printpainter.cpp  printpainter.h
src/render/: katelayoutcache.cpp  katelayoutcache.h  katelinelayout.cpp  katelinelayout.h  katerenderer.cpp  katerenderer.h  katerenderrange.cpp  katerenderrange.h  katetextlayout.cpp  katetextlayout.h
src/schema/: katecategorydrawer.cpp  katecategorydrawer.h  katecolortreewidget.cpp  katecolortreewidget.h  kateschema.cpp  kateschema.h  kateschemaconfig.cpp  kateschemaconfig.h  katestyletreewidget.cpp  katestyletreewidget.h
src/script/: katecommandlinescript.cpp  katecommandlinescript.h  kateindentscript.cpp  kateindentscript.h  katescript.cpp  katescript.h  katescriptaction.cpp  katescriptaction.h  katescriptconsole.cpp  katescriptconsole.h  katescriptdocument.cpp  katescriptdocument.h  katescripteditor.cpp  katescripteditor.h  katescripthelpers.cpp  katescripthelpers.h  katescriptmanager.cpp  katescriptmanager.h  katescriptview.cpp  katescriptview.h  katetemplatescript.cpp  katetemplatescript.h  scriptcursor.h  scriptrange.h
src/scripttester/: README.md  ktexteditorscripttester.cpp  ktexteditorscripttester.qrc  scripttester.cpp  scripttester_p.h  testframework.js
src/search/: katematch.cpp  katematch.h  kateplaintextsearch.cpp  kateplaintextsearch.h  kateregexp.cpp  kateregexp.h  kateregexpsearch.cpp  kateregexpsearch.h  katesearchbar.cpp  katesearchbar.h  searchbarincremental.ui  searchbarpower.ui  searchinterface.h
src/spellcheck/: ontheflycheck.cpp  ontheflycheck.h  prefixstore.cpp  prefixstore.h  spellcheck.cpp  spellcheck.h  spellcheckbar.cpp  spellcheckbar.h  spellcheckbar.ui  spellcheckdialog.cpp  spellcheckdialog.h  spellingmenu.cpp  spellingmenu.h
src/src/: application.cpp  codecompletionmodel.cpp  codecompletionmodelcontrollerinterface.cpp  configinterface.cpp  document.cpp  (+6 more)
(+1122 files in other folders)
